syntax = "proto3";

package search;

option go_package = "socialnet/services/search/gen;searchpb";

import "google/api/annotations.proto";
import "user.proto";
import "post.proto";

service SearchService {
  // SearchUsers → GET /api/v1/search/users?q={query}
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse) {
    option (google.api.http) = { get: "/api/v1/search/users" };
  }

  // SearchPosts → GET /api/v1/search/posts?q={query}
  rpc SearchPosts(SearchPostsRequest) returns (SearchPostsResponse) {
    option (google.api.http) = { get: "/api/v1/search/posts" };
  }
}

// ---- Requests ----
message SearchUsersRequest {
  string query = 1;
}
message SearchPostsRequest {
  string query = 1;
}

// ---- Responses ----
message SearchUsersResponse {
  repeated user.User users = 1;
}

message SearchPostsResponse {
  repeated post.Post posts = 1;
}
